kubernetes/main/apps/default/plex-media-server/app/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-media-server-internal
  labels:
    app.kubernetes.io/name: plex-media-server
spec:
  hostnames:
    - plex.internal.denniseffing.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex-media-server
          port: 32400
